--- a/BankingService.Api/ClientApp/src/styles.css
+++ b/BankingService.Api/ClientApp/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+html, body
+{
+    color : lightgray;
+	background-color : #1f1f1f;
+    font-family: Ubuntu;
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    font-family: Ubuntu;
+}
