--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
@@ -1,7 +1,7 @@
 <div class="card main-card">
   <div class="import-button-section">
-    <button class="import-button">Import Bank File</button>
-    <button class="import-button">Import Paypal File</button>
+    <button class="import-button big-button">Import Bank File</button>
+    <button class="import-button big-button">Import Paypal File</button>
   </div>
   <div class="inner-section">
     <mat-form-field>
