wip: figuring out what I wanna do

--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
@@ -43,9 +43,10 @@
     color: lightgray !important;
 }
 
-/* ::ng-deep .mat-datepicker-content-container{
+::ng-deep .mat-mdc-menu-content{
+    color: lightgray;
     background-color: rgb(42, 42, 42) !important;
-} */
+}
 
 mat-label {
     color: lightgray !important;
