feat: sample text headers

--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.html
@@ -1,3 +1,10 @@
 <div class="container">
-  Transaction header
+  <span>Date</span>
+  <span>Flow</span>
+  <span>Treasury</span>
+  <span>Label</span>
+  <span>Type</span>
+  <span>Category</span>
+  <span>AutoComment</span>
+  <span>Comment</span>
 </div>
