--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.css
@@ -3,4 +3,7 @@
     padding: 10px;
     background-color: #1f1f1f;
     border-radius: 5px;
+
+    display: flex;
+    justify-content: space-between;
 }
