--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
@@ -1,6 +1,15 @@
 .container {
     margin: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     padding: 10px;
-    background-color: #1f1f1f;
+    background-color: rgb(37, 37, 37);
     border-radius: 5px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.column {
+    width: 11%;
 }
