--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.css
@@ -11,3 +11,9 @@
     background-color: #1f1f1f;
     border-radius: 5px;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
