--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.css
@@ -4,6 +4,10 @@
     background-color: #1f1f1f;
     border-radius: 5px;
 
+    font-family: Ubuntu, sans-serif;
+    font-size: large;
+    font-weight: 500;
+
     display: flex;
     justify-content: space-between;
 }
