--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.css
@@ -26,9 +26,13 @@
 }
 
 ::ng-deep .mat-mdc-menu-content{
-    color: lightgray;
     background-color: rgb(42, 42, 42) !important;
 }
+
+::ng-deep .mat-mdc-menu-item{
+    color: lightgray;
+}
+
 
 mat-label {
     color: lightgray !important;
