--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -1,32 +1,63 @@
 <div class="container">
-    
-  <mat-form-field>
-    <mat-label>Enter a date range</mat-label>
-    <mat-date-range-input [rangePicker]="picker">
-      <input matStartDate placeholder="Start date">
-      <input matEndDate placeholder="End date">
-    </mat-date-range-input>
-    <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-date-range-picker #picker></mat-date-range-picker>
-  </mat-form-field>
-  
-  <div>
-    <label for="search-transaction">Search:</label><br>
-    <input id="search-transaction"/>
+  <div class="filter-input">
+    <input
+      class="search-text-field"
+      id="search-transaction"
+      placeholder="Search..."
+    />
   </div>
 
-  <button mat-button [matMenuTriggerFor]="menu">Category</button>
-  <mat-menu #menu="matMenu" >
-    <button mat-menu-item (click)="menuItemClicked('Option 1')">Option 1</button>
-    <button mat-menu-item (click)="menuItemClicked('Option 2')">Option 2</button>
-    <button mat-menu-item (click)="menuItemClicked('Option 3')">Option 3</button>
-  </mat-menu>
-  <button mat-button [matMenuTriggerFor]="menu">Type</button>
-  <mat-menu #menu="matMenu" >
-    <button mat-menu-item (click)="menuItemClicked('Option 1')">Option 1</button>
-    <button mat-menu-item (click)="menuItemClicked('Option 2')">Option 2</button>
-    <button mat-menu-item (click)="menuItemClicked('Option 3')">Option 3</button>
-  </mat-menu>
-  
+  <div class="filter-input">
+    <mat-form-field>
+      <mat-label>Enter a date range</mat-label>
+      <mat-date-range-input [rangePicker]="picker">
+        <input matStartDate placeholder="Start date" />
+        <input matEndDate placeholder="End date" />
+      </mat-date-range-input>
+      <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
+      <mat-datepicker-toggle
+        matIconSuffix
+        [for]="picker"
+      ></mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
+    </mat-form-field>
+  </div>
+
+  <div class="filter-input">
+    <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
+      Type
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="menuItemClicked('Option 1')">
+        Option 1
+      </button>
+      <button mat-menu-item (click)="menuItemClicked('Option 2')">
+        Option 2
+      </button>
+      <button mat-menu-item (click)="menuItemClicked('Option 3')">
+        Option 3
+      </button>
+    </mat-menu>
+  </div>
+
+  <div class="filter-input">
+    <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
+      Category
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="menuItemClicked('Option 1')">
+        Option 1
+      </button>
+      <button mat-menu-item (click)="menuItemClicked('Option 2')">
+        Option 2
+      </button>
+      <button mat-menu-item (click)="menuItemClicked('Option 3')">
+        Option 3
+      </button>
+    </mat-menu>
+  </div>
+  <div class="filter-clear">
+    <button class="big-button clear-button">Clear Filters</button>
+  </div>
 </div>
+
