--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
@@ -3,35 +3,85 @@
   margin-left: 20px;
   margin-right: 20px;
   padding: 10px;
-  background-color: rgb(37, 37, 37);
+  background-color: rgba(20, 0, 75, 0.5);
   border-radius: 5px;
 
   font-family: Ubuntu, sans-serif;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
-.column,
-.column-center,
-.column-right {
-  width: 11%;
+.red-bg {
+    background-color: rgba(20, 0, 0, 0.5);
 }
 
-.column-center {
-  text-align: center;
+.green-bg {
+    background-color: rgba(0, 20, 0, 0.5);
 }
 
-.column-right {
-  text-align: right;
+.column {
+  margin: 0 6px;
+}
+
+.date-column {
+    min-width: 80px;
+}
+
+.flow-column {
+    text-align: right;
+    min-width: 55px;
+}
+
+.treasury-column {
+    text-align: right;
+    min-width: 55px;
+}
+
+.label-column {
+    min-width:100px;
+    max-width:100px;
+}
+
+.type-column {
+    flex-basis: 50%;
+}
+
+.category-column {
+    flex-basis: 50%;
+}
+
+.autoComment-column {
+    flex-basis: 100%;
+}
+
+.comment-column {
+    flex-basis: 100%;
+}
+
+.action-column {
+    max-width: 50px;
+    min-width: 50px;
+    text-align: right;
 }
 
 .editable-text-field {
-  background-color: lightgrey;
-  color: rgb(37, 37, 37);
+  background-color: rgb(180, 180, 180);
+  color: black;
   font-family: Ubuntu, sans-serif;
-  padding: 5px;
+  padding: 3px;
+  width: 100%;
+}
+
+.dropdown-button {
+    background-color: rgb(180, 180, 180);
+    color: black;
+    font-family: Ubuntu, sans-serif;
+    padding: 3px;
+    border: none;
+    width: 100%;
+    text-align: left;
 }
 
 .edit-save-button {
