feat: replace edit button with icon, and put label in a tooltip

--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -25,7 +25,7 @@
 
   <div class="filter-input">
     <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
-      Type
+      Filter Type...
     </button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="menuItemClicked('Option 1')">
@@ -42,7 +42,7 @@
 
   <div class="filter-input">
     <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
-      Category
+      Filter Category...
     </button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item (click)="menuItemClicked('Option 1')">
