--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-headers/transaction-headers.component.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <span>Date</span>
-  <span>Flow</span>
-  <span>Treasury</span>
-  <span>Label</span>
-  <span>Type</span>
-  <span>Category</span>
-  <span>AutoComment</span>
-  <span>Comment</span>
-  <span>Action</span>
+  <span class="column date-column">Date</span>
+  <span class="column flow-column">Flow</span>
+  <span class="column treasury-column">Treasury</span>
+  <span class="column type-column">Type</span>
+  <span class="column category-column">Category</span>
+  <span class="column autoComment-column">AutoComment</span>
+  <span class="column comment-column">Comment</span>
+  <span class="column label-column"></span>
+  <span class="column action-column">Action</span>
 </div>
