--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.css
@@ -33,11 +33,12 @@
   font-weight: bold;
   text-align: right;
   min-width: 55px;
+  text-align: center;
 }
 
 .treasury-column {
-  text-align: right;
-  min-width: 55px;
+  text-align: center;
+  min-width: 75px;
 }
 
 .type-column {
@@ -48,11 +49,7 @@
   flex-basis: 50%;
 }
 
-.autoComment-column {
-  flex-basis: 100%;
-}
-
-.comment-column {
+.autoComment-column, .comment-column {
   flex-basis: 100%;
 }
 
