--- a/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/filters/filters.component.html
@@ -4,6 +4,7 @@
       class="search-text-field"
       id="search-transaction"
       placeholder="Search..."
+      [(ngModel)]="searchFilter"
     />
   </div>
 
@@ -11,8 +12,12 @@
     <mat-form-field>
       <mat-label>Enter a date range</mat-label>
       <mat-date-range-input [rangePicker]="picker">
-        <input matStartDate placeholder="Start date" />
-        <input matEndDate placeholder="End date" />
+        <input
+          matStartDate
+          placeholder="Start date"
+          [(ngModel)]="startDateFilter"
+        />
+        <input matEndDate placeholder="End date" [(ngModel)]="endDateFilter" />
       </mat-date-range-input>
       <mat-hint>DD/MM/YYYY – DD/MM/YYYY</mat-hint>
       <mat-datepicker-toggle
@@ -24,40 +29,42 @@
   </div>
 
   <div class="filter-input">
-    <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
-      Filter Type...
+    <button class="dropdown-button" mat-button [matMenuTriggerFor]="menuType">
+      {{ filterTypeButtonText }}
     </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="menuItemClicked('Option 1')">
-        Option 1
-      </button>
-      <button mat-menu-item (click)="menuItemClicked('Option 2')">
-        Option 2
-      </button>
-      <button mat-menu-item (click)="menuItemClicked('Option 3')">
-        Option 3
+    <mat-menu #menuType="matMenu">
+      <button
+        *ngFor="let t of types"
+        mat-menu-item
+        (click)="typesMenuItemClicked(t)"
+      >
+        {{ t }}
       </button>
     </mat-menu>
   </div>
 
   <div class="filter-input">
-    <button mat-button [matMenuTriggerFor]="menu" class="dropdown-button">
-      Filter Category...
+    <button
+      class="dropdown-button"
+      mat-button
+      [matMenuTriggerFor]="menuCategory"
+    >
+      {{ filterCategoryButtonText }}
     </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="menuItemClicked('Option 1')">
-        Option 1
-      </button>
-      <button mat-menu-item (click)="menuItemClicked('Option 2')">
-        Option 2
-      </button>
-      <button mat-menu-item (click)="menuItemClicked('Option 3')">
-        Option 3
+    <mat-menu #menuCategory="matMenu">
+      <button
+        *ngFor="let c of categories"
+        mat-menu-item
+        (click)="categoryMenuItemClicked(c)"
+      >
+        {{ c }}
       </button>
     </mat-menu>
   </div>
+
   <div class="filter-clear">
-    <button class="big-button clear-button">Clear Filters</button>
+    <button class="big-button clear-button" (click)="onClearFilter()">
+      Clear Filters
+    </button>
   </div>
 </div>
-
