feat: bind import componenent to import service

--- a/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transactions.component.html
@@ -1,6 +1,6 @@
 <div class="card main-card">
 
-  <app-import></app-import>
+  <app-import (uploadComplete)="refreshList()"></app-import>
   <app-filters (filterOutput)="onFiltersChanged($event)"></app-filters>
   <app-transaction-headers></app-transaction-headers>
   <ul>
