--- a/BankingService.Api/ClientApp/src/app/transactions/import/import.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/import/import.component.html
@@ -1,5 +1,6 @@
 <div class="import-button-section">
-  <button class="import-button big-button" (click)="fileInput.click()">Import Bank File</button>
-  <input type="file" #fileInput (change)="onBankFileSelected($event)"/>
-  <button class="import-button big-button">Import Paypal File</button>
+  <button class="import-button big-button" (click)="bankFileInput.click()">Import Bank File</button>
+  <input type="file" #bankFileInput (change)="onBankFileSelected($event)"/>
+  <button class="import-button big-button" (click)="paypalFileInput.click()">Import Paypal File</button>
+  <input type="file" #paypalFileInput (change)="onPayalFileSelected($event)"/>
 </div>
