feat: init dashboard implementation

--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,13 @@
-<p>
-  dashboard works!
-</p>
+<div class="main-container">
+  <div class="card">Date Selection</div>
+  <div class="dasboards-container">
+    <div class="dashboard-line-container">
+      <div class="card">Pie Chart</div>
+      <div class="card">Pie Chart No Costs</div>
+    </div>
+    <div class="dashboard-line-container">
+      <div class="card">Data</div>
+      <div class="card">linechart</div>
+    </div>
+  </div>
+</div>
