--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,25 @@
 <div class="main-container">
-  <div class="card">Date Selection</div>
+  <div class="card dashboard-card">Date Selection</div>
   <div class="dasboards-container">
     <div class="dashboard-line-container">
-      <div class="card">Pie Chart</div>
-      <div class="card">Pie Chart No Costs</div>
+      <div class="card dashboard-card">
+        <div class="chart-title"><mat-icon fontIcon="data_usage" class="icon"/><span>Categories</span></div>
+        <app-pie [inputData]="fullPieData"/>
+      </div>
+      <div class="card dashboard-card">
+        <div class="chart-title"><mat-icon fontIcon="data_usage" class="icon"/><span>Categories without costs</span></div>
+        <app-pie [inputData]="noCostsPieData"/>
+      </div>
     </div>
     <div class="dashboard-line-container">
-      <div class="card">Data</div>
-      <div class="card">linechart</div>
+      <div class="card dashboard-card">
+        <div class="chart-title"><mat-icon fontIcon="dashboard" class="icon"/><span>Misc Data</span></div>
+        
+      </div>
+      <div class="card dashboard-card">
+        <div class="chart-title"><mat-icon fontIcon="stacked_line_chart" class="icon"/><span>Treasury per date</span></div>
+        
+      </div>
     </div>
   </div>
 </div>
