--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,8 @@
       </div>
       <div class="card dashboard-card">
         <div class="chart-title"><mat-icon fontIcon="stacked_line_chart" class="icon"/><span>Treasury per date</span></div>
-        
+        <!-- https://swimlane.github.io/ngx-charts/#/ngx-charts/line-chart -->
+        <app-my-line-chart/>
       </div>
     </div>
   </div>
