--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
       <div class="card dashboard-card">
         <div class="chart-title"><mat-icon fontIcon="stacked_line_chart" class="icon"/><span>Treasury per date</span></div>
         <!-- https://swimlane.github.io/ngx-charts/#/ngx-charts/line-chart -->
-        <app-my-line-chart/>
+        <app-my-line-chart [inputData]="lineData"/>
       </div>
     </div>
   </div>
