--- a/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.html
+++ b/BankingService.Api/ClientApp/src/app/transactions/transaction-item/transaction-item.component.html
@@ -2,8 +2,8 @@
   <span class="column date-column">{{
     transaction.date.toLocaleDateString()
   }}</span>
-  <span class="column flow-column">{{ transaction.flow }} €</span>
-  <span class="column treasury-column">{{ transaction.treasury }} €</span>
+  <span class="column flow-column">{{ transaction.flow | numberToMoney }}</span>
+  <span class="column treasury-column">{{ transaction.treasury | numberToMoney }}</span>
 
   <span class="column type-column">
     <span *ngIf="areEditableFieldsDisabled; else typesInput">{{
