feat!: Connect one front endpoint to the read backend. And welcome #5 #6 #7

--- a/BankingService.Api/ClientApp/src/app/dashboard/misc-data/misc-data.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/misc-data/misc-data.component.html
@@ -42,7 +42,7 @@
       <table>
         <tbody>
           <tr *ngFor="let t of report?.highestOperations">
-            <td>{{ t.date.toLocaleDateString()}}</td>
+            <td>{{ t.date | dateToString }}</td>
             <td>{{ t.flow | numberToMoney }}</td>
             <td>{{ t.type }}<br>{{ t.category }}</td>
             <td>{{ t.autoComment }}<br>{{ t.comment }}</td>
