feat: kind of finished the date picker for the dashboard

--- a/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/BankingService.Api/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div class="main-container">
   <div class="card dashboard-card">
+    <div class="chart-title"><mat-icon fontIcon="calendar_month" class="icon"/><span>Date Selection</span></div>
     <app-date-selector (reportInput)="loadReport($event)"/>
   </div>
   <div class="dasboards-container">
